<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/intro_text_1_1"
            style="@style/CashBlock.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#212121"
            android:textSize="16dp"
            tools:text="@string/acbsr_intro_1_1" />


        <androidx.appcompat.widget.AppCompatImageView
            style="@style/CashBlock.Widget.ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/acbsr_intro_margin_top_1_1"
            android:src="@drawable/acbsr_ic_intro_1_1" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/CashBlock.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/acbsr_intro_margin_top_1_2"
            android:text="@string/acbsr_intro_1_2"
            android:textColor="#212121"
            android:textSize="16dp" />


        <androidx.appcompat.widget.AppCompatImageView
            style="@style/CashBlock.Widget.ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/acbsr_intro_margin_top_1_3"
            android:src="@drawable/acbsr_ic_intro_1_2" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/intro_text_1_3"
            style="@style/CashBlock.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/acbsr_intro_margin_top_1_4"
            android:textColor="#212121"
            android:textSize="16dp"
            tools:text="@string/acbsr_intro_1_3" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>