<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:background="#000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/acbsr_frame_battery_optimization"
        android:padding="14dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dialog_battery_optimize_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="5dp"
            android:src="@drawable/acb_common_ic_close_black_14x14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_battery_optimize_message"
            style="@style/CashBlock.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/dialog_battery_optimize_close"
            android:layout_toLeftOf="@+id/dialog_battery_optimize_close"
            android:lineHeight="24dp"
            android:textSize="16dp"
            tools:text="@string/acbsr_string_battery_optimize_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialog_battery_optimize_notice"
            style="@style/CashBlock.Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_battery_optimize_message"
            android:layout_marginTop="8dp"
            android:text="@string/acbsr_string_battery_optimize_notice"
            android:textColor="#80868B"
            android:textSize="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_battery_optimize_notice"
            android:layout_marginTop="18dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_battery_optimize_detail"
                style="@style/CashBlock.Widget.Button"
                android:layout_width="wrap_content"
                android:background="@drawable/acb_common_outline_212121_r4"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingLeft="24dp"
                android:paddingEnd="24dp"
                android:paddingRight="24dp"
                android:text="@string/acbsr_string_battery_optimize_view_desc"
                android:textColor="#000000"
                android:textSize="14dp" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dialog_battery_optimize_setting"
                style="@style/CashBlock.Widget.Button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/acb_common_selector_button_ef5350_c1bfd4_r4"
                android:gravity="center"
                android:text="@string/acbsr_string_battery_optimize_allow"
                android:textColor="#FFFFFF"
                android:textSize="14dp" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>