<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#4c000000"
    tools:theme="@style/CashBlock.Widget.Dialog">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:layout_marginEnd="40dp"
        tools:layout_marginLeft="40dp"
        tools:layout_marginRight="40dp"
        tools:layout_marginStart="40dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/acb_common_rectangle_ffffff_r4"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/button_close"
                style="@style/CashBlock.Widget.ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:src="@drawable/acb_common_ic_close_black_14x14" />


            <!-- region { content image } -->
            <androidx.appcompat.widget.AppCompatImageView
                style="@style/CashBlock.Widget.ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/acbsr_bitmap_notification_window" />
            <!-- endregion -->


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CashBlock.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/acbsr_string_notification_induce_dialog_title"
                android:textColor="#212121"
                android:textSize="22dp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subtitle"
                style="@style/CashBlock.Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="#212121"
                android:textSize="12dp"
                tools:text="@string/acbsr_string_notification_induce_dialog_sub_title" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="#000000" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description_1"
                style="@style/CashBlock.Widget.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:textColor="#212121"
                android:textSize="10dp"
                tools:text="@string/acbsr_string_notification_induce_dialog_description_1" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/description_2"
                style="@style/CashBlock.Widget.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:textColor="#212121"
                android:textSize="10dp"
                tools:text="@string/acbsr_string_notification_induce_dialog_description_2" />


            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_action"
            style="@style/CashBlock.Widget.Button"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/acb_common_rectangle_ef5350_r4"
            android:gravity="center"
            android:text="@string/acbsr_string_button_notification_on"
            android:textSize="14dp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>